--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [nosetests]
 verbosity = 1
 with-doctest = 1
-with-coverage = 1
+#with-coverage = 1
 cover-package = mopidy
 cover-inclusive = 1
 cover-html = 1
