--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
-include COPYING
-include *.rst
-include requirements*.txt
-recursive-include docs *.rst
+include COPYING pylintrc *.rst *.txt
+recursive-include docs *
+prune docs/_build
+recursive-include tests *.py
+recursive-include tests/data *
