Update MANIFEST.in to include LICENSE instead of COPYING

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include COPYING pylintrc *.rst *.txt
+include LICENSE pylintrc *.rst *.txt
 recursive-include docs *
 prune docs/_build
 recursive-include tests *.py
