Add mopidy.desktop file to get Mopidy into Gnome menus

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include LICENSE pylintrc *.rst *.txt
+include LICENSE pylintrc *.rst *.txt data/mopidy.desktop
 include mopidy/backends/libspotify/spotify_appkey.key
 recursive-include docs *
 prune docs/_build
