Make mopidy.desktop pass desktop-file-validate validation

--- a/data/mopidy.desktop
+++ b/data/mopidy.desktop
@@ -7,4 +7,4 @@ Icon=audio-x-generic
 TryExec=mopidy
 Exec=mopidy
 Terminal=true
-Categories=AudioVideo;Audio;Player;ConsoleOnly
+Categories=AudioVideo;Audio;Player;ConsoleOnly;
