Make tox work by allowing the use of global site-packages

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist = py26,py27,docs
 [testenv]
 deps = nose
 commands = nosetests []
+sitepackages = True
 
 [testenv:docs]
 basepython = python
