Make Travis use IRC notice notifications without joining the channel

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,5 @@ notifications:
       - "irc.freenode.org#mopidy"
     on_success: change
     on_failure: change
+    use_notice: true
+    skip_join: true
