http: Serve placeholder index.html when no STATIC_DIR set

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ include LICENSE
 include MANIFEST.in
 include data/mopidy.desktop
 include mopidy/backends/spotify/spotify_appkey.key
+include mopidy/frontends/http/index.html
 include pylintrc
 recursive-include docs *
 prune docs/_build
