Fix error in MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,7 +7,7 @@ include mopidy/backends/spotify/spotify_appkey.key
 include pylintrc
 recursive-include docs *
 prune docs/_build
-recursive-include mopidy/frontends/http/data/
+recursive-include mopidy/frontends/http/data *
 recursive-include requirements *
 recursive-include tests *.py
 recursive-include tests/data *
