config: Add logging/config_file

--- a/mopidy/config/default.conf
+++ b/mopidy/config/default.conf
@@ -2,6 +2,7 @@
 console_format = %(levelname)-8s %(message)s
 debug_format = %(levelname)-8s %(asctime)s [%(process)d:%(threadName)s] %(name)s\n  %(message)s
 debug_file = mopidy.log
+config_file =
 
 [loglevels]
 pykka = info
