setup: Make sure all *.conf files are packaged

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,12 +1,14 @@
-include *.conf
 include *.rst
 include LICENSE
 include MANIFEST.in
 include data/mopidy.desktop
 include mopidy/backends/spotify/spotify_appkey.key
 include pylintrc
+
 recursive-include docs *
 prune docs/_build
+
+recursive-include mopidy *.conf
 recursive-include mopidy/frontends/http/data *
 recursive-include requirements *
 recursive-include tests *.py
