--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends:
     python-support,
     python-sphinx (>= 1.0),
     python-pygraphviz
-Standards-Version: 3.9.3
+Standards-Version: 3.9.4
 Homepage: http://www.mopidy.com/
 Vcs-Git: git://github.com/mopidy/mopidy.git
 Vcs-Browser: https://github.com/mopidy/mopidy
@@ -20,6 +20,7 @@ Architecture: all
 Depends:
     ${misc:Depends},
     ${python:Depends},
+    python-setuptools,
     python-pykka (>= 1.1.0), python-pykka (<< 2),
     python-gst0.10,
     gstreamer0.10-plugins-good
@@ -34,8 +35,7 @@ Recommends:
     python-cherrypy3,
     python-ws4py
 Suggests:
-    mopidy-doc,
-    python-serial
+    mopidy-doc
 Description: music server with MPD client support
  Mopidy is a music server which can play music from Spotify or from your
  local hard drive. To search for music in Spotify’s vast archive, manage
