--- a/debian/rules
+++ b/debian/rules
@@ -11,7 +11,7 @@ override_dh_clean:
 	dh_clean
 
 override_dh_installchangelogs:
-	dh_installchangelogs docs/changes.rst
+	dh_installchangelogs docs/changelog.rst
 
 override_dh_installdocs:
 	make -C docs/ clean html
