js: Use 'npm start' to run 'grunt watch'

--- a/js/package.json
+++ b/js/package.json
@@ -31,6 +31,6 @@
   "scripts": {
     "test": "grunt test",
     "build": "grunt build",
-    "watch": "grunt watch"
+    "start": "grunt watch"
   }
 }
