--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,14 @@ install:
   - "sudo wget -q -O /etc/apt/sources.list.d/mopidy.list http://apt.mopidy.com/mopidy.list"
   - "sudo apt-get update || true"
   - "sudo apt-get install $(apt-cache depends mopidy | awk '$2 !~ /mopidy/ {print $2}')"
+  - "pip install flake8"
 
 before_script:
   - "rm $VIRTUAL_ENV/lib/python$TRAVIS_PYTHON_VERSION/no-global-site-packages.txt"
 
-script: nosetests
+script:
+  - "flake8 $(find . -iname '*.py')"
+  - "nosetests"
 
 notifications:
   irc:
