--- a/js/package.json
+++ b/js/package.json
@@ -19,14 +19,14 @@
     "when": "~2.4.0"
   },
   "devDependencies": {
-    "buster": "~0.6.12",
+    "buster": "~0.6.13",
     "grunt": "~0.4.1",
     "grunt-buster": "~0.2.1",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-jshint": "~0.4.3",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-watch": "~0.4.3",
-    "phantomjs": "~1.9.0"
+    "grunt-contrib-jshint": "~0.6.4",
+    "grunt-contrib-uglify": "~0.2.4",
+    "grunt-contrib-watch": "~0.5.3",
+    "phantomjs": "~1.9.2-0"
   },
   "scripts": {
     "test": "grunt test",
