debian: Add python-setuptools to Build-Depends

--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Stein Magnus Jodal <stein.magnus@jodal.no>
 Build-Depends:
     debhelper (>= 7.0.50~),
+    python-setuptools,
     python-support,
     python-sphinx (>= 1.0),
     python-pygraphviz
