--- a/debian/control
+++ b/debian/control
@@ -4,15 +4,14 @@ Priority: optional
 Maintainer: Stein Magnus Jodal <stein.magnus@jodal.no>
 Build-Depends:
     debhelper (>= 8.0.0),
+    python (>= 2.7),
     python-setuptools,
-    python-support,
     python-sphinx (>= 1.0),
     python-pygraphviz
 Standards-Version: 3.9.4
 Homepage: http://www.mopidy.com/
 Vcs-Git: git://github.com/mopidy/mopidy.git
 Vcs-Browser: https://github.com/mopidy/mopidy
-XS-Python-Version: >= 2.7
 X-Python-Version: >= 2.7
 X-Python3-Version: << 3
 
@@ -25,6 +24,8 @@ Depends:
     python-pykka (>= 1.1.0), python-pykka (<< 2),
     python-gst0.10,
     gstreamer0.10-plugins-good
+Provides:
+    ${python:Provides}
 Recommends:
     gstreamer0.10-alsa,
     gstreamer0.10-plugins-ugly,
